UtahLiveDataTest/src/objects/Review__c.object
<CustomObject>
    <fields>
        <fullName>RecommendedBudget__c</fullName>
        <label>Recommended Budget</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReqAttachmentUploadedComments__c</fullName>
        <label>ReqAttachmentUploadedComments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ReqAttachmentUploaded__c</fullName>
        <label>Required Attachments Uploaded?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestAmountSubmittedForServiceArea__c</fullName>
        <label>Request Amount Submitted For ServiceArea</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestedBudget__c</fullName>
        <formula>Application__r.TotalFederalMatch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RequestedTotalBudgetSufficient__c</fullName>
        <label>Requested Total Budget Sufficient</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReviewAcceptanceStatus__c</fullName>
        <label>Review Acceptance Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReviewCompleted__c</fullName>
        <formula>IF ( TEXT(Status__c) == &apos;Review Completed&apos;, true , false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReviewDeclineReason__c</fullName>
        <label>Review Decline Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other Workload</fullName>
                </value>
                <value>
                    <fullName>Out of Town</fullName>
                </value>
                <value>
                    <fullName>Conflict of Interest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReviewDueDate__c</fullName>
        <formula>ReviewPanel__r.EndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReviewEndDate__c</fullName>
        <label>Review End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReviewFor__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+(IF( ISBLANK(Application__c ) ,  PreApplication__c, Application__c)),(IF( ISBLANK(Application__c ) ,  PreApplication__r.Name, Application__r.Name)),&apos;_blank&apos;)</formula>
        <label>Review For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewPanelName__c</fullName>
        <description>Auto populated by trigger</description>
        <label>Review Panel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewPanel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review Panel</label>
        <referenceTo>ReviewPanel__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewStartDate__c</fullName>
        <label>Review Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReviewStepNameFormula__c</fullName>
        <formula>ReviewStep__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReviewStepNameFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewStepName__c</fullName>
        <description>Auto populated by trigger</description>
        <label>Review Step Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewStepNumber__c</fullName>
        <formula>ReviewStep__r.StepNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReviewStepNumber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReviewStep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review Step</label>
        <referenceTo>ReviewStep__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewType__c</fullName>
        <formula>IF( ReviewPanel__r.ReviewStep__r.StepNumber__c == 1, &apos;Pre-Screen Review&apos;,  IF( ReviewPanel__r.ReviewStep__r.StepNumber__c == 2, &apos;External Review&apos;,  IF( ReviewPanel__r.ReviewStep__r.StepNumber__c == 3, &apos;Internal Review&apos;, &apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewURL__c</fullName>
        <formula>IF ( Owner:User.IsExternalUser__c,
	IF(Owner:User.IsReviewer__c, 
		$Setup.GNT__GlobalConfig__c.GNT__CommunityURLDomain__c &amp;&apos;/&apos;&amp; $Setup.GNT__GlobalConfig__c.GNT__Namespace__c &amp;&apos;ReviewerLogin?startURL=/&apos; &amp; $Setup.GNT__GlobalConfig__c.GNT__Namespace__c &amp; &apos;ReviewRedirect?id=&apos; &amp; Id, 
		$Setup.GNT__GlobalConfig__c.GNT__CommunityURLDomain__c &amp; &apos;?startURL=/&apos; &amp; $Setup.GNT__GlobalConfig__c.GNT__Namespace__c &amp; &apos;ReviewRedirect?id=&apos; &amp; Id
		),
	$Setup.GNT__GlobalConfig__c.GNT__InternalURLDomain__c &amp; &apos;?startURL=/&apos; &amp; $Setup.GNT__GlobalConfig__c.GNT__Namespace__c &amp; &apos;ReviewRedirect?id=&apos; &amp; Id
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <label>Reviewed By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewerIsExt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReviewerIsExt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer(Obsolete)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RiskAssessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Assessment</label>
        <referenceTo>RiskAssessment__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RiskQuestion1__c</fullName>
        <label>RiskQuestion1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RiskQuestion2__c</fullName>
        <label>RiskQuestion2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RiskQuestion3__c</fullName>
        <label>RiskQuestion3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RiskScore__c</fullName>
        <formula>If(ISPICKVAL(RiskQuestion1__c,&apos;No&apos;),1,0)+If(ISPICKVAL(RiskQuestion2__c,&apos;No&apos;),1,0)+If(ISPICKVAL(RiskQuestion3__c,&apos;No&apos;),1,0)+If(ISPICKVAL(RiskQuestion4__c,&apos;No&apos;),1,0)+If(ISPICKVAL(RiskQuestion5__c,&apos;No&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMEAvgScoreOnMgmt__c</fullName>
        <formula>TotalScoreFromSME__c/NumberOfReviews__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SME Average Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMEQuestion1__c</fullName>
        <label>Is the Project Narrative given?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMEQuestion2__c</fullName>
        <label>Is Supporting project documents given?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMEQuestion3__c</fullName>
        <label>Is the Idea/Proposal authentic?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMERecAmount__c</fullName>
        <description>System Recommended Amount based on SME Reviews</description>
        <formula>Application__r.SMERecAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System Recommended Amount based on SME Reviews</inlineHelpText>
        <label>SME Recommended Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMETotalPoints__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>SME Total Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScopePreScreenComments__c</fullName>
        <label>ScopePreScreenComments</label>
        <length>11768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ScopePreScreen__c</fullName>
        <label>ScopePreScreen</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAreaBudgetAllocationJustified__c</fullName>
        <label>ServiceArea Budget Allocation Justified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceAreaBudgetAllocationSufficient__c</fullName>
        <label>ServiceArea Budget Allocation Sufficient</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceAreaBudgetsProvidedComments__c</fullName>
        <label>ServiceAreaBudgetsProvidedComments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ServiceAreaBudgetsProvided__c</fullName>
        <label>Service Area Budgets Provided?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Sent for Review</fullName>
                </value>
                <value>
                    <fullName>Review In Progress</fullName>
                </value>
                <value>
                    <fullName>Review Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <label>Strengths</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Strengths1__c</fullName>
        <label>Strengths</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Strengths2__c</fullName>
        <label>Strengths</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Strengths3__c</fullName>
        <label>Strengths</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SubCriteriaAQuestion1__c</fullName>
        <label>Sub-Criteria A Question 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubCriteriaAQuestion2__c</fullName>
        <label>Sub-Criteria A Question 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubCriteriaAQuestion3__c</fullName>
        <label>Sub-Criteria A Question 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubCriteriaBQuestion1__c</fullName>
        <label>Sub-Criteria B Question 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubCriteriaBQuestion2__c</fullName>
        <label>Sub-Criteria B Question 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubCriteriaBQuestion3__c</fullName>
        <label>Sub-Criteria B Question 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubCriteriaCQuestion1__c</fullName>
        <label>Sub-Criteria C Question 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubCriteriaCQuestion2__c</fullName>
        <label>Sub-Criteria C Question 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubCriteriaCQuestion3__c</fullName>
        <label>Sub-Criteria C Question 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubCriteriaDQuestion1__c</fullName>
        <label>Sub-Criteria D Question 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>0.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubCriteriaDQuestion2__c</fullName>
        <label>Sub-Criteria D Question 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>0.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubCriteriaDQuestion3__c</fullName>
        <label>Sub-Criteria D Question 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubCriteriaQuestion1__c</fullName>
        <label>Sub-Criteria question 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubCriteriaQuestion2__c</fullName>
        <label>Sub-Criteria Question 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubCriteriaquestion3__c</fullName>
        <label>Sub-Criteria question 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmittedByApplicantComments__c</fullName>
        <label>Submitted By Applicant Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SubmittedByApplicant__c</fullName>
        <label>Submitted By Applicant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmittedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubmittedOn__c</fullName>
        <label>Submitted On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SubstantiallyCompletedDate__c</fullName>
        <label>Substantially Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SuggestionsComments__c</fullName>
        <description>Suggestions: The following is a list of suggestions that were given from the committee. It is not necessary to implement these suggestions into your grant, but you are free to do so if you wish.</description>
        <label>SuggestionsComments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SummaryScore__c</fullName>
        <description>Contains total of all the submitted review score</description>
        <inlineHelpText>Contains total of all the submitted review score</inlineHelpText>
        <label>Summary Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SupplementalSubmissionComments__c</fullName>
        <label>Supplemental Submission Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SupplementalSubmissionRequired__c</fullName>
        <label>Supplemental Submission Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SupplimentalStatus__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Notification Sent</fullName>
                </value>
                <value>
                    <fullName>Notification Not Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalCriteriaScore__c</fullName>
        <label>Total Criteria Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalScoreFromSME__c</fullName>
        <description>This score is copied from panel application to review object in assignappsandnotifyreviewer class</description>
        <label>Total Score from SME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalScore__c</fullName>
        <formula>TotalSubCriteriaAScore__c + TotalSubCriteriaBScore__c + TotalSubCriteriaCScore__c + TotalSubCriteriaDScore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalSubCriteriaAScore__c</fullName>
        <formula>VALUE( TEXT(SubCriteriaQuestion1__c))+ VALUE( TEXT(SubCriteriaQuestion2__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sub-Criteria A Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>